# HuffmanTree

./: CMakeLists.txt  Huffman项目分工及框架构建思路.docx  Makefile  README.md  makefile
include/: Project.h  Tobit.h
lib/: BuildTree.c  Fileread.c  Frequence_Count.c  code.c  makefile
libunzip/: Translate.c  unzip.c
libzip/: BuildTree.c  Fileread.c  Infinity_stones.c  enCode.c  makefile  structOfHuffmantree.c  zip.c
src/: BuildTree.c  Fileread.c  Frequence_Count.c  code uncode.c  code.c  enCode.c  main.c  structOfHuffmantree.c  unzip.c  zip.c
src/base/: BuildTree.c  Fileread.c  Frequence_Count.c  Infinity_stones.c  structOfHuffmantree.c
